package sia;

public abstract class Beverage {
    private String description;

    abstract public float cost();
    abstract public String getDescription();
}
