package sia;

public class DarkRoast extends Beverage {

    @Override
    public float cost() {
        return 0.89f;
    }

    public String getDescription() {
        return "DarkRoast with: ";
    }
}
