package sia;

public class Espresso extends Beverage {
    @Override
    public float cost() {
        return 0.89f;
    }

    public String getDescription() {
        return "Espresso";
    }
}

